# gr-filtdes

./: CMakeLists.txt  README
apps/: CMakeLists.txt  gr_filter_design
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: CMakeLists.txt  gr_filter_api.py  gr_filter_callback.py  gr_filter_restrict.py
grc/: CMakeLists.txt  filtdes_firdes.xml  filtdes_remez.xml
icons/: CMakeLists.txt
include/: CMakeLists.txt  filtdes_api.h  gr_iirdes.h
lib/: CMakeLists.txt  gr_iir_analog_design.cc  gr_iir_analog_design.h  gr_iirdes.cc
python/: CMakeLists.txt  __init__.py  api_object.py  bandgraphicsview.py  banditems.py  filter_design.py  fir_design.py  gr_filter_design.py  idealbanditems.py  optfir.py  polezero_plot.py  pyqt_filter_new.py  pyqt_filter_new.ui  pyqt_filter_stacked.py  pyqt_filter_stacked.ui  qa_filtdes_iirdes.py
swig/: CMakeLists.txt  filtdes_swig.i  gr_iirdes.i
